fixed swagger + controllers
